--- a/templates/question.html
+++ b/templates/question.html
@@ -9,13 +9,12 @@
     <title>Questions</title>
 </head>
 <body>
-    <section>
+<main class="container">
+    <section class="row">
         <H1 class="display-4"> Heart Disease Risk Prediction using Machine Learning Algorithms </H1>
         {% block content %} {% endblock %}
     </section>
-
-
-
+</main>
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
