--- a/templates/questions_8.html
+++ b/templates/questions_8.html
@@ -8,7 +8,7 @@
     </div>
 </section>
 <section>
-    <form action="answer" method="POST">
+    <form action="answer" method="POST" class="needs-validation" novalidate>
         <section>
             <h3 class="display-5">Health Conditions:</h3>
             <h6 class="display-6"> Has a doctor, nurse, or other health professional ever told you that you had any of
@@ -26,14 +26,14 @@
                         <div class="form-check form-check-inline space-between-radio">
                             <label for="depressive_disorder_yes" class="form-check-label">Yes</label>
                             <input type="radio" class="form-check-input" id="depressive_disorder_yes"
-                                   name="depressive_disorder_yes" value="yes"
-                                   aria-label="yes">
+                                   name="depressive_disorder" value="yes"
+                                   aria-label="yes" required>
                         </div>
                         <div class="form-check form-check-inline">
                             <label for="depressive_disorder_no" class="form-check-label">No</label>
                             <input type="radio" class="form-check-input" id="depressive_disorder_no"
-                                   name="depressive_disorder_no" value="no"
-                                   aria-label="no">
+                                   name="depressive_disorder" value="no"
+                                   aria-label="no" required>
                         </div>
                     </section>
                 </section>
@@ -46,14 +46,14 @@
                     <section class="col">
                         <div class="form-check form-check-inline space-between-radio">
                             <label for="diabetes_yes" class="form-check-label">Yes</label>
-                            <input type="radio" class="form-check-input" id="diabetes_yes" name="diabetes_yes"
+                            <input type="radio" class="form-check-input" id="diabetes_yes" name="diabetes"
                                    value="yes"
-                                   aria-label="yes">
+                                   aria-label="yes" required>
                         </div>
                         <div class="form-check form-check-inline">
                             <label for="diabetes_no" class="form-check-label">No</label>
-                            <input type="radio" class="form-check-input" id="diabetes_no" name="diabetes_no" value="no"
-                                   aria-label="no">
+                            <input type="radio" class="form-check-input" id="diabetes_no" name="diabetes" value="no"
+                                   aria-label="no" required>
                         </div>
                     </section>
                 </section>
@@ -67,15 +67,15 @@
                     <section class="col">
                         <div class="form-check form-check-inline space-between-radio">
                             <label for="arthritis_yes" class="form-check-label">Yes</label>
-                            <input type="radio" class="form-check-input" id="arthritis_yes" name="arthritis_yes"
+                            <input type="radio" class="form-check-input" id="arthritis_yes" name="arthritis"
                                    value="yes"
-                                   aria-label="yes">
+                                   aria-label="yes" required>
                         </div>
                         <div class="form-check form-check-inline">
                             <label for="arthritis_no" class="form-check-label">No</label>
-                            <input type="radio" class="form-check-input" id="arthritis_no" name="arthritis_no"
+                            <input type="radio" class="form-check-input" id="arthritis_no" name="arthritis"
                                    value="no"
-                                   aria-label="no">
+                                   aria-label="no" required>
                         </div>
                     </section>
                 </section>
@@ -88,15 +88,15 @@
                     <section class="col">
                         <div class="form-check form-check-inline space-between-radio">
                             <label for="skin_cancer_yes" class="form-check-label">Yes</label>
-                            <input type="radio" class="form-check-input" id="skin_cancer_yes" name="skin_cancer_yes"
+                            <input type="radio" class="form-check-input" id="skin_cancer_yes" name="skin_cancer"
                                    value="yes"
-                                   aria-label="yes">
+                                   aria-label="yes" required>
                         </div>
                         <div class="form-check form-check-inline">
                             <label for="skin_cancer_no" class="form-check-label">No</label>
-                            <input type="radio" class="form-check-input" id="skin_cancer_no" name="skin_cancer_no"
+                            <input type="radio" class="form-check-input" id="skin_cancer_no" name="skin_cancer"
                                    value="no"
-                                   aria-label="no">
+                                   aria-label="no" required>
                         </div>
                     </section>
                 </section>
@@ -109,15 +109,15 @@
                     <section class="col">
                         <div class="form-check form-check-inline space-between-radio">
                             <label for="other_cancer_yes" class="form-check-label">Yes</label>
-                            <input type="radio" class="form-check-input" id="other_cancer_yes" name="other_cancer_yes"
+                            <input type="radio" class="form-check-input" id="other_cancer_yes" name="other_cancer"
                                    value="yes"
-                                   aria-label="yes">
+                                   aria-label="yes" required>
                         </div>
                         <div class="form-check form-check-inline">
                             <label for="other_cancer_no" class="form-check-label">No</label>
-                            <input type="radio" class="form-check-input" id="other_cancer_no" name="other_cancer_no"
+                            <input type="radio" class="form-check-input" id="other_cancer_no" name="other_cancer"
                                    value="no"
-                                   aria-label="no">
+                                   aria-label="no" required>
                         </div>
                     </section>
                 </section>
